dev-capec/force-app/main/default/objects/Entrada__c/Entrada__c.object-meta.xml
<CustomObject>
    <label>Entrada</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Entrada</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entradas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>