dev-capec/force-app/main/default/objects/Entrada__c/fields/ContatoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>ContatoResponsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato responsável</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entradas</relationshipLabel>
    <relationshipName>Entradas</relationshipName>
    <type>Lookup</type>
</CustomField>