dev-capec/force-app/main/default/objects/Entrada__c/fields/DataEmissaoNota__c.field-meta.xml
<CustomField>
    <fullName>DataEmissaoNota__c</fullName>
    <label>Data de Emissão da Nota</label>
    <type>DateTime</type>
</CustomField>