dev-capec/force-app/main/default/objects/Entrada__c/fields/DataEntrada__c.field-meta.xml
<CustomField>
    <fullName>DataEntrada__c</fullName>
    <label>Data da entrada</label>
    <type>Date</type>
</CustomField>