dev-capec/force-app/main/default/objects/Entrada__c/fields/Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estoque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estoque</label>
    <referenceTo>Estoque__c</referenceTo>
    <relationshipLabel>Entradas</relationshipLabel>
    <relationshipName>Entradas</relationshipName>
    <type>Lookup</type>
</CustomField>