dev-capec/force-app/main/default/objects/Entrada__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <label>Nota Fiscal</label>
    <type>Phone</type>
</CustomField>