dev-capec/force-app/main/default/objects/Entrada__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Com NF</fullName>
            </value>
            <value>
                <fullName>Sem NF</fullName>
            </value>
            <value>
                <fullName>Anônima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>