dev-capec/force-app/main/default/objects/Entrada__c/recordTypes/Compra.recordType-meta.xml
<RecordType>
    <fullName>Compra</fullName>
    <active>true</active>
    <label>Compra</label>
</RecordType>