dev-capec/force-app/main/default/objects/Entrada__c/recordTypes/Doacao.recordType-meta.xml
<RecordType>
    <fullName>Doacao</fullName>
    <active>true</active>
    <label>Doação</label>
</RecordType>