dev-capec/force-app/main/default/objects/Entrada__c/validationRules/ValidaDataNF.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaDataNF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Tipo__c, &apos;Com NF&apos;),
				ISBLANK(DataEmissaoNota__c)  
)</errorConditionFormula>
    <errorDisplayField>DataEmissaoNota__c</errorDisplayField>
    <errorMessage>Preencha esse campo.</errorMessage>
</ValidationRule>