dev-capec/force-app/main/default/objects/Entrada__c/validationRules/ValidaFornecedor.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaFornecedor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Tipo__c, &apos;Com NF&apos;),
				ISBLANK(Fornecedor__c)  
)</errorConditionFormula>
    <errorDisplayField>Fornecedor__c</errorDisplayField>
    <errorMessage>Preencha esse campo.</errorMessage>
</ValidationRule>