dev-capec/force-app/main/default/objects/Entrada__c/validationRules/ValidaNF.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaNF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Tipo__c, &apos;Com NF&apos;),
				ISBLANK(NotaFiscal__c)
)</errorConditionFormula>
    <errorDisplayField>NotaFiscal__c</errorDisplayField>
    <errorMessage>Preencha esse campo.</errorMessage>
</ValidationRule>