dev-capec/force-app/main/default/objects/Entrada__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Produto__c</columns>
    <columns>Tipo__c</columns>
    <columns>ContatoResponsavel__c</columns>
    <columns>DataEntrada__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>